@startuml
left to right direction
skinparam packageStyle rectangle
skinparam nodesep 35
skinparam ranksep 45
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam shadowing false

title Architecture Asklepios : Multi-Centres, Rendez-vous, DPI & Examens

' --- DEFINITION DES COULEURS PAR DOMAINE ---
skinparam package {
    BackgroundColor<<Identity>> #E3F2FD
    BackgroundColor<<Infra>> #E8F5E9
    BackgroundColor<<Workflow>> #FFF9C4
    BackgroundColor<<Clinical>> #FCE4EC
    BackgroundColor<<Billing>> #F3E5F5
}

package "1. Core, Groupement & Identité" <<Identity>> {
    class tenant {
        id: UnsignedBigInteger
        name: String
    }
    class hospital_branch {
        id: UnsignedBigInteger
        tenant_id: UnsignedBigInteger
        name: String
        address: String
        contact_phone: String
    }
    class patient {
        id: UnsignedBigInteger
        tenant_id: UnsignedBigInteger
        patient_code: String
        first_name: String
        last_name: String
        gender: String ('M', 'F', 'OTHER')
        birth_date: Date
        birth_place: String_optional
        contact_phone: String
        email: String_optional
        address: Text_optional
        emergency_contact_name: String_optional
        emergency_contact_phone: String_optional
    }
    class receptionist {
        id: UnsignedBigInteger
        user_id: UnsignedBigInteger
        hospital_branch_id: UnsignedBigInteger
        desk_name: String
    }
    class practitioner {
        id: UnsignedBigInteger
        user_id: UnsignedBigInteger
        tenant_id: UnsignedBigInteger
        specialty: String
        grade: String
        default_consultation_price: float
    }
}

package "2. Infrastructures & Tarification Hébergement" <<Infra>> {
    class department {
        id: UnsignedBigInteger
        hospital_branch_id: UnsignedBigInteger
        name: String
    }
    class room_category {
        id: UnsignedBigInteger
        hospital_branch_id: UnsignedBigInteger
        name: String
        price_per_night: float
    }
    class facility_room {
        id: UnsignedBigInteger
        department_id: UnsignedBigInteger
        room_category_id: UnsignedBigInteger_optional
        name: String
        type: String ('WAITING_ROOM', 'CONSULTATION', 'WARD')
    }
    class bed {
        id: UnsignedBigInteger
        facility_room_id: UnsignedBigInteger
        bed_number: String
        status: String ('AVAILABLE', 'OCCUPIED', 'CLEANING', 'MAINTENANCE')
    }
    class equipment {
        id: UnsignedBigInteger
        department_id: UnsignedBigInteger
        name: String
        status: String
    }
}

package "3. Rendez-vous & File d'Attente" <<Workflow>> {
    class appointment {
        id: UnsignedBigInteger
        patient_id: UnsignedBigInteger
        practitioner_id: UnsignedBigInteger
        hospital_branch_id: UnsignedBigInteger
        scheduled_datetime: Datetime
        reason: String
        status: String ('SCHEDULED', 'CANCELLED', 'ARRIVED')
    }
    class patient_visit {
        id: UnsignedBigInteger
        patient_id: UnsignedBigInteger
        hospital_branch_id: UnsignedBigInteger
        receptionist_id: UnsignedBigInteger
        appointment_id: UnsignedBigInteger_optional
        waiting_room_id: UnsignedBigInteger_optional
        consulting_room_id: UnsignedBigInteger_optional
        arrival_time: Datetime
        queue_number: Integer
        status: String ('IN_WAITING_ROOM', 'IN_CONSULTATION', 'COMPLETED')
        visit_type: String ('ROUTINE', 'EMERGENCY', 'FOLLOW_UP')
    }
}

package "4. Dossier Clinique, Hospitalisation & Examens" <<Clinical>> {
    class medical_background {
        id: UnsignedBigInteger
        patient_id: UnsignedBigInteger
        blood_type: String_optional
        allergies: JSON_optional
        chronic_conditions: JSON_optional
        family_history: Text_optional
        last_updated_at: Datetime
    }
    class consultation {
        id: UnsignedBigInteger
        patient_visit_id: UnsignedBigInteger
        practitioner_id: UnsignedBigInteger
        chief_complaint: Text
        clinical_data: JSON
        consultation_price: float
    }
    class admission {
        id: UnsignedBigInteger
        patient_visit_id: UnsignedBigInteger
        bed_id: UnsignedBigInteger
        admission_date: Datetime
        actual_discharge_date: Datetime_optional
        status: String ('ADMITTED', 'DISCHARGED')
    }
    class prescription {
        id: UnsignedBigInteger
        consultation_id: UnsignedBigInteger
        status: String
    }
    class prescription_line {
        id: UnsignedBigInteger
        prescription_id: UnsignedBigInteger
        article_id: UnsignedBigInteger_optional
        custom_medication_name: String_optional
        dosage: String
    }
    class exam_request {
        id: UnsignedBigInteger
        consultation_id: UnsignedBigInteger
        status: String ('PENDING', 'COMPLETED')
        created_at: Datetime
    }
    class exam_request_line {
        id: UnsignedBigInteger
        exam_request_id: UnsignedBigInteger
        lab_parameter_id_optional: UnsignedBigInteger (Pont futur Module Labo)
        exam_name: String (ex: Echographie Pelvienne, NFS)
        result_notes: Text_optional (Saisie si Labo externe)
        document_url: String_optional (Scan PDF du résultat externe)
    }
}

package "5. Actes Médicaux & Facturation" <<Billing>> {
    class medical_act_catalog {
        id: UnsignedBigInteger
        tenant_id: UnsignedBigInteger
        department_id: UnsignedBigInteger_optional
        name: String
        base_price: float
    }
    class performed_medical_act {
        id: UnsignedBigInteger
        patient_visit_id: UnsignedBigInteger
        medical_act_catalog_id: UnsignedBigInteger
        equipment_id: UnsignedBigInteger_optional
        applied_price: float
        performed_at: Datetime
    }
    class invoice {
        id: UnsignedBigInteger
        patient_id: UnsignedBigInteger
        hospital_branch_id: UnsignedBigInteger
        patient_visit_id: UnsignedBigInteger_optional
        total_amount: float
        status: String ('UNPAID', 'PAID')
    }
    class invoice_line {
        id: UnsignedBigInteger
        invoice_id: UnsignedBigInteger
        reference_type: String
        reference_id: UnsignedBigInteger
        description: String
        unit_price: float
    }
    class payment {
        id: UnsignedBigInteger
        invoice_id: UnsignedBigInteger
        cashier_id: UnsignedBigInteger
        amount: float
        payment_method: String
    }
}

' --- RELATIONS CORE & MULTI-CENTRES ---
tenant "1" *-- "*" hospital_branch
tenant "1" *-- "*" patient
tenant "1" *-- "*" practitioner
tenant "1" *-- "*" medical_act_catalog

hospital_branch "1" *-- "*" receptionist
hospital_branch "1" *-- "*" room_category
hospital_branch "1" *-- "*" department
hospital_branch "1" <-- "*" appointment : a lieu à <
hospital_branch "1" <-- "*" patient_visit : se déroule à <
hospital_branch "1" *-- "*" invoice : émise par >

' --- RELATIONS INFRASTRUCTURES ---
department "1" *-- "*" facility_room
room_category "1" <-- "*" facility_room : classifie _optional <
facility_room "1" *-- "*" bed
department "1" *-- "*" equipment

' --- RELATIONS WORKFLOW ---
patient "1" *-- "*" appointment
practitioner "1" <-- "*" appointment
patient "1" *-- "*" patient_visit
receptionist "1" <-- "*" patient_visit
appointment "1" <-- "1" patient_visit : honore <
facility_room "1" <-- "*" patient_visit : attend dans <
facility_room "1" <-- "*" patient_visit : consulté dans <

' --- RELATIONS ACTES & CLINIQUE ---
patient "1" *-- "1" medical_background : possède historique >

medical_act_catalog "1" <-- "*" performed_medical_act
patient_visit "1" *-- "*" performed_medical_act
equipment "1" <-- "*" performed_medical_act

patient_visit "1" *-- "1" consultation
patient_visit "1" *-- "*" admission
bed "1" <-- "*" admission

' --- RELATIONS PRESCRIPTIONS (MEDICAMENTS & EXAMENS) ---
consultation "1" *-- "1" prescription
prescription "1" *-- "*" prescription_line
consultation "1" *-- "*" exam_request
exam_request "1" *-- "1..*" exam_request_line

' --- RELATIONS FACTURATION ---
patient "1" *-- "*" invoice
patient_visit "1" <-- "*" invoice
invoice "1" *-- "*" invoice_line
invoice "1" *-- "*" payment

performed_medical_act "1" .. "*" invoice_line
consultation "1" .. "*" invoice_line
admission "1" .. "*" invoice_line
exam_request_line "1" .. "*" invoice_line : facturé via _optional >

@enduml